--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -8,6 +8,21 @@ body {
 
 #page-wrapper { max-width: 61.3333em; }
 
+a {
+	color: inherit;
+	text-decoration: none;
+	display: inline-table;
+}
+
+a::after {
+	content: "";
+	border-bottom: .13em solid #cfcfcf;
+	display: table-caption;
+	caption-side: bottom;
+ 	position: relative;
+	margin-top: -0.1em;
+}
+
 h1 {
 	font: 1.8em Raleway, sans-serif;
 	margin: .5555em 0;
